Some changes, mainly switching of theme and co-theme for correlations, plus some notes

--- a/visual.conf
+++ b/visual.conf
@@ -20,5 +20,8 @@ Increase     bgColor:Orange
 Decrease     bgColor:SkyBlue
 Cause       bgColor:Green
 
+And bgColor:Brown
+Or  bgColor:Brown
+
 
 Coref   dashArray:7-3
